src/objects/ApplicationVersion__c.object
<CustomObject>
    <description>Contains information about a version of the TaroWorks mobile application.
Allows admin to choose which version of the application is available to the Mobile Users in the field</description>
    <fields>
        <fullName>CompatibleVersion__c</fullName>
        <description>The version of Salesforce that this application was released to work with</description>
        <externalId>true</externalId>
        <inlineHelpText>This indicates the version of Salesforce that the mobile application is designed to work with best.</inlineHelpText>
        <label>Compatible Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownloadURL__c</fullName>
        <description>The URL where the application version can be downloaded from</description>
        <inlineHelpText>Enter the URL that the application version can be found at</inlineHelpText>
        <label>Download URL</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this application version is available to download</description>
        <inlineHelpText>Un-check this to make the application version unavailable to users in the field</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldestConfirmedVersion__c</fullName>
        <description>Indicates the oldest version of Salesforce that the application was tested against</description>
        <inlineHelpText>If your version of TaroWorks is older than this then the application has not been tested against it and cannot be guaranteed to work</inlineHelpText>
        <label>Oldest Confirmed Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The date that the application version was made available to the Mobile Users in the field.</description>
        <inlineHelpText>Set the date that the application version should be available to the Mobile Users in the field.</inlineHelpText>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <label>Application Version</label>
    <nameField>
        <label>Version Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Version</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>